# skripsi

./: .gitignore  README.md  olah_data_skripsi.py  pseudocode i2c.md  pseudocode spi.md
C/: build.sh  i2c.c  run.sh  spi.c  test_spi.c  transfer.sh
Go/: run.sh
Go/I2C/: build.sh  go.mod  i2c.go
Go/SPI/: build.sh  go.mod  spi.go
Java/: run.sh
Java/main_i2c/main_i2c/: pom.xml
Java/main_i2c/main_i2c/platform/: raspberry.properties
Java/main_i2c/main_i2c/src/main/java/: module-info.java
Java/main_spi/spi/: pom.xml
Java/main_spi/spi/platform/: raspberry.properties
Java/main_spi/spi/src/main/java/: module-info.java
Java/main_spi/spi/src/main/java/com/rian/: Main.java
NodeJS/: build.sh  package-lock.json  package.json  run.sh  transfer.sh
NodeJS/main_i2c/: package-lock.json  package.json
NodeJS/main_spi/: package-lock.json  package.json
NodeJS/src/: i2c.js  spi.js
Python/: i2c.py  requirements.txt  run.sh  spi.py  transfer.sh
Rust/: run.sh
Rust/main_i2c/: .gitignore  Cargo.toml  Dockerfile  build.sh
Rust/main_i2c/.cargo/: config
Rust/main_i2c/src/: main.rs
Rust/main_spi/: Cargo.toml  build.sh
Rust/main_spi/src/: main.rs
arduino/: README.md
arduino/i2c/: i2c.ino
arduino/i2c bak/: i2c bak.ino
arduino/i2c_test/: i2c_test.ino
arduino/sensor_test/: sensor_test.ino
arduino/spi/: spi.ino
arduino/spi_test/: spi_test.ino
arduino/test_analog/: test_analog.ino
dotnet/: README.md  run.sh
dotnet/main_i2c/: Program.cs  build.sh  main_i2c.csproj
dotnet/main_spi/: Program.cs  build.sh
python/: i2c.py
(+1 files in other folders)
