[package]
name = "main_spi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
openssl = { version = "0.10.45", features = ["vendored"] }
reqwest = "0.11.14"
rppal = "0.14.0"
